All the buttons - good to go

--- a/include/captive_portal/index.html
+++ b/include/captive_portal/index.html
@@ -61,7 +61,7 @@
       <br />
 
       <input
-        type="password"
+        type="text"
         placeholder="WiFi Password"
         name="password"
         required
